--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://www.thecocktaildb.com" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
