--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="preconnect" href="https://www.thecocktaildb.com" />
   </head>
-  <body class="mat-typography">
+  <body class="mat-typography dark-theme">
     <app-root></app-root>
   </body>
 </html>
