--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <meta name="theme-color" content="#1976d2" />
     <link rel="manifest" href="manifest.webmanifest" />
   </head>
-  <body class="mat-typography dark-theme">
+  <body class="mat-typography">
     <app-root></app-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
